apps/tr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tr
spec:
  selector:
    app: tr
  ports:
    - name: http
      port: 80
      targetPort: http
